[tool.poetry]
name = "diag-driven-ad-models"
version = "0.1.0"
description = ""
authors = ["hsteude <henrik.steude@gmail.com>"]
readme = "README.md"
packages = [
    {include = "diag_driven_ad_models"},
    {include = "data_modules"}
]

[tool.poetry.dependencies]
python = ">=3.9,<3.12.0"
pandas = "^2.0.3"
pyarrow = "^12.0.1"
torch = "2.0.0"
pytorch-lightning = "^2.0.6"
tensorboard = "^2.13.0"
loguru = "^0.7.0"
s3fs = "^2023.6.0"
black = "^23.7.0"
torchinfo = "^1.8.0"
nbstripout = "^0.6.1"
toml = "^0.10.2"
scikit-learn = "^1.3.1"
ipykernel = "^6.25.2"
plotly = "^5.17.0"
tqdm = "^4.66.1"
scipy = "^1.11.3"
seaborn = "^0.13.0"
kubernetes = "^28.1.0"
kaleido = "0.2.1"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
ipython = "^8.14.0"
ipdb = "^0.13.13"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
venvPath = "."
venv = ".venv"
